--- a/client/src/Components/Card/Card.module.css
+++ b/client/src/Components/Card/Card.module.css
@@ -1,13 +1,12 @@
 .card{
     background-color: rgb(168, 165, 165);
-    width: 100%;
-    max-width: 1200px;
-    height: 430px;
+    width: 270px;
+    height: 370px;
     border-radius: 25px;
     border-color: grey;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    margin: 20px;
+    margin: 6px;
     text-align: center;
     transition: all 0.25s;
  }
@@ -23,7 +22,7 @@
 }
 
  .card h3{
-    font-weight: 1000;
+    font-size: 18px;
     font-style: normal;
     color: black;
     font-weight: bold;
