--- a/client/src/Components/CreateDog/CreateDog.module.css
+++ b/client/src/Components/CreateDog/CreateDog.module.css
@@ -3,8 +3,7 @@
     top:0%;
     width: 100%;
     max-height:max-content;
-    background: white;
-    /* background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(176,176,176,1) 30%); */
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEbcfltO2YMzgIFlO96tfoZFDRFiVWWUd5cw&usqp=CAU');  
 }
 
 .backBtn {
@@ -21,6 +20,39 @@
     font-style: normal;
     border: solid 3px black;
     transition: 500ms;
+}
+
+.backBtn:hover, .backBtn:focus {
+    background: #d8d80c;
+    cursor: pointer;
+    box-shadow: inset -6.5px -6.5px 0px 0px #4c4c0a;
+}
+
+.backBtn:active {
+  background: #b3b308;
+  box-shadow: inset 4px 4px 0px 0px #4c4c0a;
+}
+
+.backBtn:before, .backBtn:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-sizing: content-box;
+}
+
+.backBtn:before {
+  top: -6px;
+  left: 0;
+  border-top: 6px black solid;
+  border-bottom: 6px black solid;
+}
+
+.backBtn:after {
+  left: -6px;
+  top: 0;
+  border-left: 6px black solid;
+  border-right: 6px black solid;
 }
 
 .control {
@@ -50,14 +82,45 @@
     font-size: 16px;
 }
 
+.create:hover, .create:focus {
+    background: #d8d80c;
+    cursor: pointer;
+    box-shadow: inset -6.5px -6.5px 0px 0px #4c4c0a;
+}
+
+.createBtn:active {
+  background: #b3b308;
+  box-shadow: inset 4px 4px 0px 0px #4c4c0a;
+}
+
+.create:before, .create:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-sizing: content-box;
+}
+
+.create:before {
+  top: -6px;
+  left: 0;
+  border-top: 6px black solid;
+  border-bottom: 6px black solid;
+}
+
+.create:after {
+  left: -6px;
+  top: 0;
+  border-left: 6px black solid;
+  border-right: 6px black solid;
+}
+
 .delete {
     position: relative;
     top: 5px;
-    background-color: black;
     display:flex;
     align-items: center;
     justify-content: center; 
-
 }
 
 .deleteBtn {
@@ -114,15 +177,13 @@ p {
     height:300px;
     width:300px;
     border-radius: 100px;
-  }
+}
 
 .title {
-    -moz-user-select: none ;
-    -ms-user-select: none ;
+    color:#FFF;
     user-select: none ;
-    color: black;
     text-align: center;
     margin-top:20px;
     font-size: 38px; 
     font-style: 'Calibri';
-  }
+}
