--- a/client/src/Components/Detail/Detail.module.css
+++ b/client/src/Components/Detail/Detail.module.css
@@ -96,7 +96,8 @@
     font-weight: 600;
     font-size: 10px;
     color: black;
-    text-align: left;
-    text-align: justify;
+    text-align: center;
+/*     text-align: left;
+    text-align: justify; */
 }
 
